@@ -8,8 +8,10 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
   Fixed rare divide-by-zero error in reporting code.
 
-  Added on-the-fly zip compression of the output file
-    thanks to Nicholas Clark.
+  Added on-the-fly zip compression thanks to Nicholas Clark.
+    Reduces data file size per million statements executed
+    from approx ~13MB to ~1MB (depends on code being profiled).
+
   Added xsfile=0 option to NYTPROF env var for perl5.8.8 users affected
     by CvFILE bug causing corrupt filename for xsubs, sometimes.
 
